--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,16 +1,15 @@
 [project]
-name = "python-realtime"
+name = "python-voice-agent"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
-    "langchain-core",
     "langchain",
+    "pyaudio",
     "python-dotenv",
-    "assemblyai",
-    "websockets",
-    "pyaudio"
+    "websockets"
 ]
 
 [project.optional-dependencies]
+assemblyai = ["assemblyai"]
 elevenlabs = ["elevenlabs"]
 anthropic = ["langchain-anthropic"]
