--- a/components/python/pyproject.toml
+++ b/components/python/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "langchain",
     "langchain-anthropic>=1.2.0",
     "langchain-core>=1.1.0",
+    "langchain-openai>=1.1.7",
     "langgraph>=1.0.4",
     "python-dotenv",
     "uvicorn>=0.38.0",
