Add pipecat-quickstart example and transport
Introduce a new pipecat-quickstart component that demos multi-turn voice bot workflows using file-based audio. Added files: components/pipecat-quickstart/{bot.py, file_audio_transport.py, record_audio.py, Dockerfile, env.example, pyproject.toml, .gitignore}. The FileAudioTransport simulates real-time user turns by streaming WAV files (audio_turns/) into the pipeline and optionally saves bot responses to output_audio/. A small record_audio utility is included to capture microphone input, and a Dockerfile demonstrates building the example with uv/lock integration. Also update root .gitignore to ignore new output dirs and evaluation result directories.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ lerna-debug.log*
 *.sw?
 
 components/python/evals/results/
+components/python/evals/results-v2/
+
+components/pipecat-quickstart/output_audio/
+components/pipecat-quickstart/audio_turns/
