Add WebSocket agent transport & TTS flow
Introduce a WebSocket-based transport for connecting to external voice agents and wire it into the quickstart bot. Changes include:

- Add components/pipecat-quickstart/ws_agent_transport.py: new WSAgentTransport with WSAgentInputTransport and WSAgentOutputTransport that send/receive raw audio and JSON events, save per-turn audio, and coordinate conversation termination.
- Update bot.py to support TRANSPORT env var (file or websocket), new system prompts for file vs websocket modes, factory functions for file/ws transports, reduced TTS sample rate to 16000, ensure pipeline shutdown and transport.close() called.
- Update .gitignore to include simulation_audio and normalize audio_turns entry.
- Remove Cartesia and ElevenLabs TTS modules (deleted files) and simplify main.py to use Deepgram TTS only; load_dotenv now uses override=True.
- deepgram_tts.py: add a flush event and flush() to wait until sent audio is generated (useful for ordering tts_chunks before agent_end).
- main.py: set DeepgramSTT endpointing param, buffer agent chunks and send them to TTS on agent_end, await tts.flush() so tts_chunks are emitted before agent_end, and improve websocket endpoint cleanup (aclose and exception handling).
- utils.py: make merge_async_iters spawn explicit tasks, cancel them in finally and gather to ensure proper cleanup.

These changes enable running the bot against an external voice agent over WebSocket, ensure proper audio ordering and cleanup, and remove unused TTS backends.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ components/python/evals/results-v2/
 
 components/pipecat-quickstart/output_audio/
 components/pipecat-quickstart/audio_turns/
+components/pipecat-quickstart/simulation_audio/
