Add agent audio endpointing and sample-rate configs
Improve simulator agent-turn detection and voice-agent audio configuration:

- user_simulation: change default MAX_TURNS from 5 to 2 and add env vars POST_MAX_TURN_IDLE_TIMEOUT_SECS, AGENT_AUDIO_SILENCE_MS, AGENT_AUDIO_RMS_THRESHOLD to control post-max-turn wait, silence window, and RMS threshold for agent audio. Update README.
- bot_pipecat.py: implement agent audio capture lifecycle (start_agent_capture), compute RMS and per-frame duration, detect agent speech start/stop based on RMS+silence, fire a turn-complete callback, and coordinate waiting for final agent reply when MAX_TURNS is reached (with timeout). Improve idle/shutdown logic to wait for agent completion or post-max timeout.
- voice_agent_pipecat: add env vars and example entries for input/output sample rates and Deepgram STT endpointing/utterance settings. Configure Deepgram LiveOptions and pass sample rates into STT/TTS services and pipeline params so audio rates are consistent.

These changes enable more robust turn-boundary detection for simulated conversations and make audio sample-rate/endpointing configurable for the voice agent.

--- a/components/voice_agent_pipecat/env.example
+++ b/components/voice_agent_pipecat/env.example
@@ -5,5 +5,9 @@ DEEPGRAM_API_KEY=
 PIPECAT_AGENT_HOST=0.0.0.0
 PIPECAT_AGENT_PORT=8765
 PIPECAT_AGENT_LLM_MODEL=gpt-4o-mini
+PIPECAT_AGENT_INPUT_SAMPLE_RATE=16000
 PIPECAT_AGENT_TTS_SAMPLE_RATE=16000
 DEEPGRAM_TTS_MODEL=aura-asteria-en
+DEEPGRAM_STT_MODEL=nova-3-general
+DEEPGRAM_STT_ENDPOINTING_MS=500
+DEEPGRAM_STT_UTTERANCE_END_MS=1000
