Add VAPI clients, ElevenLabs TTS & STT configs
Add VAPI WebSocket clients and ElevenLabs TTS example, and update agent/simulator transports and STT/TTS configurations.

- New: VAPI utilities (components/user_simulation/vapi/run_single.py, run_turns.py) to create calls and stream/send/receive PCM over websockets.
- New: ElevenLabs sample script (components/user_simulation/e11labs/main.py) to synthesize a WAV input for simulations.
- Updated user_simulation package: pinned pipecat-ai with elevenlabs extra and added elevenlabs dependency in pyproject.toml.
- Updated bot.py: use aiohttp session, configure Deepgram LiveOptions and sample rates, optionally reference ElevenLabs STT, adjust file transport sample rate and input file selection, and reorganize pipeline setup.
- Updated bot_pipecat.py: refine prompts, fix SimulationAudioRecorder turn bookkeeping (pending turn flag), adjust TTS/STT sample rates, and simplify shutdown/max-turn logic.
- Updated voice_agent_pipecat: pin pipecat-ai extras, add uv source, and rewrite main to use aiohttp, optional GeminiLive LLM, Silero VAD, and revised transport/session settings and pipeline wiring.
- .gitignore: added pattern to ignore all .wav files.

These changes prepare the repo for testing with ElevenLabs-generated inputs, VAPI call integration, and revised STT/TTS/transport settings; dependency updates pin pipecat and add ElevenLabs support.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ components/voice_agent/evals/results-v2/
 components/user_simulation/output_audio/
 components/user_simulation/audio_turns/
 components/user_simulation/simulation_audio/
+
+# all wav files
+*.wav
